# RedditSoccerGoals

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-deploy.yml
.squad/: .first-run  decisions.md  routing.md  team.md  tmp-commit-msg.txt
.squad/agents/bender/: charter.md  history.md
.squad/agents/fry/: charter.md  history.md
.squad/agents/hermes/: charter.md  history.md
.squad/agents/leela/: charter.md  history.md
.squad/agents/nibbler/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
docs/: architecture.md
src/soccergoals/: __main__.py  config.py  downloader.py  main.py  models.py  poller.py  scanner.py  searcher.py  sender.py  store.py
src/soccergoals.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_config.py  test_downloader.py  test_models.py  test_poller.py  test_scanner.py  test_searcher.py  test_sender.py  test_store.py
